--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,58 @@
           </form>
         </div>
         <!-- product form -->
+        <div>
+          <h2 class="text-xl text-slate-300 font-bold mb-2">Add New Product</h2>
+          <form class="bg-slate-700 p-4 rounded-xl flex flex-col gap-y-4">
+            <div>
+              <label for="product-title" class="block mb-1 text-slate-400"
+                >title</label
+              >
+              <input
+                type="text"
+                name="product-title"
+                id="product-title"
+                class="bg-transparent rounded-xl border border-slate-500 text-slate-400"
+              />
+            </div>
+            <div>
+              <label for="product-quantity" class="block mb-1 text-slate-400"
+                >quantity</label
+              >
+              <input
+                type="number"
+                class="bg-transparent rounded-xl border border-slate-500 text-slate-400"
+                name="product-quantity"
+                id="product-quantity"
+              />
+            </div>
+            <div>
+              <label for="product-category" class="block mb-1 text-slate-400"
+                >Category</label
+              >
+              <select
+                name="product-category"
+                id="product-category"
+                class="bg-transparent text-slate-400 rounded-xl w-full"
+              >
+                <option class="bg-slate-500 text-slate-300" value="">
+                  select a category
+                </option>
+                <option class="bg-slate-500 text-slate-300" value="backend">
+                  backend
+                </option>
+                <option class="bg-slate-500 text-slate-300" value="frontend">
+                  frontend
+                </option>
+              </select>
+            </div>
+            <div class="flex items-center justify-between gap-x-4">
+              <button class="flex-1 bg-slate-400 to-slate-200 rounded-xl py-2">
+                Add New Product
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </body>
