--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Inventory App</title>
   </head>
   <body>
-    <div class="bg-slate-800 h-screen w-screen">
+    <div class="bg-slate-800 min-h-screen">
       <!-- appbar -->
       <div
         class="h-12 flex items-center justify-center gap-x-4 bg-slate-700 mb-6"
@@ -23,7 +23,7 @@
       <!-- app content -->
       <div class="container max-w-screen-sm mx-auto">
         <!-- category form -->
-        <div>
+        <div class="mb-6">
           <h2 class="text-xl text-slate-300 font-bold mb-2">
             Add New Category
           </h2>
@@ -65,7 +65,7 @@
           </form>
         </div>
         <!-- product form -->
-        <div>
+        <div class="mb-6">
           <h2 class="text-xl text-slate-300 font-bold mb-2">Add New Product</h2>
           <form class="bg-slate-700 p-4 rounded-xl flex flex-col gap-y-4">
             <div>
@@ -117,6 +117,28 @@
             </div>
           </form>
         </div>
+        <!-- product list -->
+        <h2 class="text-xl text-slate-300 font-bold mb-2">Product List</h2>
+        <div class="flex items-center justify-between mb-8">
+          <span class="text-slate-400">React.js</span>
+          <div class="flex items-center gap-x-3">
+            <span class="to-slate-400">date</span>
+            <span
+              class="block px-3 border border-slate-500 text-slate-400 text-sm rounded-2xl"
+              >frontend</span
+            >
+            <span
+              class="flex items-center justify-center w-7 h-7 rounded-full bg-slate-500 text-slate-300 border-2 border-slate-300"
+              >7</span
+            >
+            <button
+              class="border px-2 py-0.5 rounded-2xl border-red-400 text-red-500"
+            >
+              delete
+            </button>
+          </div>
+        </div>
+        <div class="h-20"></div>
       </div>
     </div>
   </body>
