--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,10 @@
               >
                 Cancel
               </button>
-              <button class="flex-1 bg-slate-400 to-slate-200 rounded-xl py-2">
+              <button
+                id="add-new-category"
+                class="flex-1 bg-slate-400 to-slate-200 rounded-xl py-2"
+              >
                 Add New Categoty
               </button>
             </div>
@@ -111,7 +114,10 @@
               </select>
             </div>
             <div class="flex items-center justify-between gap-x-4">
-              <button class="flex-1 bg-slate-400 to-slate-200 rounded-xl py-2">
+              <button
+                id="add-new-product"
+                class="flex-1 bg-slate-400 to-slate-200 rounded-xl py-2"
+              >
                 Add New Product
               </button>
             </div>
@@ -119,27 +125,11 @@
         </div>
         <!-- product list -->
         <h2 class="text-xl text-slate-300 font-bold mb-2">Product List</h2>
-        <div class="flex items-center justify-between mb-8">
-          <span class="text-slate-400">React.js</span>
-          <div class="flex items-center gap-x-3">
-            <span class="to-slate-400">date</span>
-            <span
-              class="block px-3 border border-slate-500 text-slate-400 text-sm rounded-2xl"
-              >frontend</span
-            >
-            <span
-              class="flex items-center justify-center w-7 h-7 rounded-full bg-slate-500 text-slate-300 border-2 border-slate-300"
-              >7</span
-            >
-            <button
-              class="border px-2 py-0.5 rounded-2xl border-red-400 text-red-500"
-            >
-              delete
-            </button>
-          </div>
-        </div>
+        <div class="product-list"></div>
+
         <div class="h-20"></div>
       </div>
     </div>
+    <script src="/src/js/app.js" type="module"></script>
   </body>
 </html>
