--- a/public/index.html
+++ b/public/index.html
@@ -125,6 +125,18 @@
         </div>
         <!-- product list -->
         <h2 class="text-xl text-slate-300 font-bold mb-2">Product List</h2>
+        <div class="flex items-center justify-between mb-6">
+          <label for="search-input" class="text-slate-500 text-lg"
+            >search</label
+          >
+          <input
+            type="text"
+            name="search-input"
+            id="search-input"
+            class="bg-transparent rounded-xl border border-slate-500 text-slate-400"
+          />
+        </div>
+
         <div class="product-list"></div>
 
         <div class="h-20"></div>
